<resources>
    <string name="app_name">PasswordManager</string>
    <string name="app_title" translatable="false">Pwd Manager</string>
    <string name="ok" translatable="false">OK</string>

    <!-- Strings used for fragments for navigation -->
    <string name="button_edit">Btn Edit Item</string>
    <string name="button_delete">Btn Delete Item</string>
    <string name="password">Password</string>
    <string name="tags">Tags</string>
    <string name="username">Username</string>
    <string name="edit_item_title">EDIT</string>
    <string name="search_item_by_name">Search item by name</string>

    <string name="action_clear_all_data">Clear all data</string>
    <string name="action_import_data">Import Data</string>
    <string name="action_add_item">Clear all data</string>
    <string name="action_export_data">Export Data</string>
    <string name="action_close_app">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_password">Change Password</string>

    <string name="setting_title">Application Settings</string>
    <string name="setting_gui_theme">Gui Theme</string>
    <string name="setting_find_mode">Find Mode</string>
    <string name="setting_language">Language</string>
    <string name="bnt_setting_save">Save Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_email">User E-Mail</string>
    <string name="action_about">About</string>
    <string name="add_tag">Add Tag</string>
    <string name="insert_password">Insert password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="restore_backup">Restore Backup</string>

    <string name="err_import_data">Cannot import data</string>
    <string name="action_save_all">Save All</string>
    <string name="create_backup">Create Backup</string>
    <string name="dialog_backup_title">DATA BACKUP</string>
    <string name="backup_list">backup list</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="title_error">ERROR!!</string>
    <string name="uppercase_missing">An uppercase is missing</string>
    <string name="number_is_missing">Number is missing</string>
    <string name="alpha_is_empty">Alpha char is missing</string>
    <string name="different_password">Password are different</string>
    <string name="password_bad_formed">Password is not well formed</string>
    <string name="str_null" />
    <string name="password_too_short">Password too short</string>
    <string name="backup_filename">BACKUP FILE</string>
    <string name="item_name">Name</string>
    <string name="bnt_setting_cancel">Cancel</string>
    <string name="btn_show_hide_pwd">show_hide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>