<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit_item_title"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:alpha="0.25"
                android:background="@drawable/rounded_corner"
                android:contentDescription="@string/button_delete"
                android:padding="5dp"
                android:radius="5dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/img_delete_foreground" />
        </LinearLayout>
        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text="@string/item_name" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text="@string/username" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:selectAllOnFocus="true"
            android:text="@string/password" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tags_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/setting_element_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="true"
            android:dividerPadding="20dp"
            android:layoutDirection="ltr"
            android:layoutMode="opticalBounds"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/btn_ok"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_gravity="clip_horizontal|clip_vertical"
                android:background="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="left"
                android:text="@string/ok"
                android:textAlignment="center"
                android:textStyle="bold" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="clip_horizontal|clip_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="right"
                android:text="Cancel"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>